src/main/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
  labels:
    app: reefer-monitoring-agent
  name: reefer-monitoring-agent
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: reefer-monitoring-agent
  template:
    metadata:
      annotations:
        prometheus.io/port: "8080"
        prometheus.io/scheme: http
        prometheus.io/scrape: "true"
        prometheus.io/path: /q/metrics
      labels:
        app.kubernetes.io/name: reefer-monitoring-agent
    spec:
      containers:
      - args:
        - -jar
        - /deployments/quarkus-run.jar
        - -cp
        - /deployments/lib/org.jboss.logging.jboss-logging-3.4.1.Final.jar:/deployments/lib/io.smallrye.smallrye-metrics-api-2.4.5.jar:/deployments/lib/io.smallrye.smallrye-metrics-2.4.5.jar:/deployments/lib/jakarta.el.jakarta.el-api-3.0.3.jar:/deployments/lib/jakarta.enterprise.jakarta.enterprise.cdi-api-2.0.2.jar:/deployments/lib/jakarta.inject.jakarta.inject-api-1.0.jar:/deployments/lib/io.quarkus.quarkus-development-mode-spi-1.12.0.Final.jar:/deployments/lib/io.smallrye.config.smallrye-confi [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: ibmcase/reefer-monitoring-agent
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: kafka-cert
          readOnly: false
          subPath: ""
        - mountPath: /deployments/certs/user
          name: user-cert
          readOnly: false
          subPath: ""
        name: reefer-monitoring-agent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 3
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
      serviceAccount: reefer-monitoring-agent
      volumes:
      - name: kafka-cert
        secret:
          optional: false
          secretName: kafka-cluster-ca-cert
      - name: user-cert
        secret:
          optional: false
          secretName: tls-user
