src/main/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "8080"
    prometheus.io/scheme: http
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
  labels:
    app.kubernetes.io/name: reefer-monitoring-agent
    app.kubernetes.io/version: 1.0.3
  name: reefer-monitoring-agent
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: reefer-monitoring-agent
    app.kubernetes.io/version: 1.0.3
  type: ClusterIP
