src/main/kubernetes/openshift.yml
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scheme: http
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-monitoring-agent.git
    app.quarkus.io/commit-id: fc855dfefc2babb80cee8c9292450da4fd9fa551
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-monitoring-agent.git
    app.quarkus.io/build-timestamp: 2021-02-01 - 01:11:20 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: reefer-monitoring-agent
    app.kubernetes.io/version: 1.0.1
    app: reefer-monitoring-agent
    app.openshift.io/runtime: quarkus
  name: reefer-monitoring-agent
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app.kubernetes.io/name: reefer-monitoring-agent
    app.kubernetes.io/version: 1.0.1
  type: ClusterIP
---
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  annotations:
    prometheus.io/scheme: http
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-monitoring-agent.git
    app.quarkus.io/commit-id: fc855dfefc2babb80cee8c9292450da4fd9fa551
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-monitoring-agent.git
    app.quarkus.io/build-timestamp: 2021-02-01 - 01:11:20 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
  labels:
    app: reefer-monitoring-agent
    app.openshift.io/runtime: quarkus
    app.kubernetes.io/name: reefer-monitoring-agent
    app.kubernetes.io/version: 1.0.1
  name: reefer-monitoring-agent
spec:
  replicas: 1
  selector:
    app.kubernetes.io/name: reefer-monitoring-agent
    app.kubernetes.io/version: 1.0.1
  template:
    metadata:
      annotations:
        prometheus.io/scheme: http
        app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-monitoring-agent.git
        app.quarkus.io/commit-id: fc855dfefc2babb80cee8c9292450da4fd9fa551
        app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-monitoring-agent.git
        app.quarkus.io/build-timestamp: 2021-02-01 - 01:11:20 +0000
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "8080"
      labels:
        app: reefer-monitoring-agent
        app.openshift.io/runtime: quarkus
        app.kubernetes.io/name: reefer-monitoring-agent
        app.kubernetes.io/version: 1.0.1
    spec:
      containers:
      - args:
        - -jar
        - /deployments/vaccine-monitoring-agent-1.0.1-runner.jar
        - -cp
        - /deployments/lib/org.jboss.logging.jboss-logging-3.4.1.Final.jar:/deployments/lib/io.smallrye.smallrye-metrics-api-2.4.4.jar:/deployments/lib/io.smallrye.smallrye-metrics-2.4.4.jar:/deployments/lib/jakarta.el.jakarta.el-api-3.0.3.jar:/deployments/lib/jakarta.enterprise.jakarta.enterprise.cdi-api-2.0.2.jar:/deployments/lib/jakarta.inject.jakarta.inject-api-1.0.jar:/deployments/lib/io.quarkus.quarkus-development-mode-spi-1.11.1.Final.jar:/deployments/lib/io.smallrye.config.smallrye-confi [...]
        - -Dquarkus.http.host=0.0.0.0
        - -Djava.util.logging.manager=org.jboss.logmanager.LogManager
        command:
        - java
        image: ibmcase/reefer-monitoring-agent
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/live
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        name: reefer-monitoring-agent
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /q/health/ready
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 0
          periodSeconds: 30
          successThreshold: 1
          timeoutSeconds: 10
        volumeMounts:
        - mountPath: /deployments/certs/server
          name: es-cert
          readOnly: false
          subPath: ""
        - mountPath: /deployments/certs/user
          name: user
          readOnly: false
          subPath: ""
      serviceAccount: reefer-monitoring-agent
      volumes:
      - name: es-cert
        secret:
          defaultMode: 384
          optional: false
          secretName: kafka-cluster-ca-cert
      - name: user
        secret:
          defaultMode: 384
          optional: false
          secretName: tls
  triggers:
  - imageChangeParams:
      automatic: true
      containerNames:
      - reefer-monitoring-agent
      from:
        kind: ImageStreamTag
        name: reefer-monitoring-agent:1.0.1
    type: ImageChange
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    prometheus.io/scheme: http
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-monitoring-agent.git
    app.quarkus.io/commit-id: fc855dfefc2babb80cee8c9292450da4fd9fa551
    app.quarkus.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-monitoring-agent.git
    app.quarkus.io/build-timestamp: 2021-02-01 - 01:11:20 +0000
    prometheus.io/scrape: "true"
    prometheus.io/path: /metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: reefer-monitoring-agent
    app.kubernetes.io/version: 1.0.1
    app: reefer-monitoring-agent
    app.openshift.io/runtime: quarkus
  name: reefer-monitoring-agent
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: reefer-monitoring-agent
