src/main/kubernetes/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    prometheus.io/scheme: http
    app.openshift.io/vcs-url: https://github.com/ibm-cloud-architecture/vaccine-monitoring-agent.git
    prometheus.io/scrape: "true"
    prometheus.io/path: /q/metrics
    prometheus.io/port: "8080"
  labels:
    app.kubernetes.io/name: reefer-monitoring-agent
    app.kubernetes.io/version: 1.0.3
    app: reefer-monitoring-agent
    app.openshift.io/runtime: quarkus
  name: reefer-monitoring-agent
spec:
  host: ""
  path: /
  port:
    targetPort: 8080
  to:
    kind: Service
    name: reefer-monitoring-agent
